[gd_scene load_steps=2 format=3 uid="uid://b1d5hknk8j0ih"]

[ext_resource type="Script" path="res://scenes/LoginInput.gd" id="1_cgd6s"]

[node name="LoginInput" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("1_cgd6s")

[node name="UsernameLabel" type="Label" parent="."]
layout_mode = 2
text = "Username/E-mail:"

[node name="UsernameLine" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "placerholder@example.com"
virtual_keyboard_type = 5

[node name="PasswordLabel" type="Label" parent="."]
layout_mode = 2
text = "Password:"

[node name="PasswordLine" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "**********"
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LoginButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Register"

[connection signal="pressed" from="HBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RegisterButton" to="." method="_on_register_button_pressed"]
